	  by Roger Pack.
	* lib/rubygems/remote_fetcher.rb:  Raise a better error when the host
	  is down.  Bug #28092 by Eric Peterson.
	* History.txt:  Add reminder to include --user-install change in the
	  1.3.7 release notes.  Bug #27896 by Matt Patterson.
	* lib/rubygems/commands/query_command.rb:  --version is only for use
	  with --installed.  Bug #27857 by Greg Hazel.

2010-04-19  Eric Hodel  <drbrain@segment7.net>

	* lib, test: Stop using Gem::RubyGemsVersion

2010-04-14  James Tucker <jftucker@gmail.com>

	* lib/rubygems/command_manager.rb: Now catches errors caused by command
	  loading. (Protect against broken plugins)
	* lib/rubygems.rb: Introduce and use Gem.load_plugins, RubyGems now
	  protects against exceptions being raised by plugins.

2010-03-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/builder.rb:  Now requires user_interaction.  Ruby
	  Bug #1040 by Phillip Toland.
	* lib/rubygems/installer.rb:  Make argument order match for
	  generate_windows_script.  Ruby patch #825 by okkez.
	* lib/rubygems/package_task.rb:  Depend on the package dir like the
	  other package tasks.

2010-03-08  James Tucker  <jftucker@gmail.com>

	* lib/rubygems/remote_fetcher.rb: fetcher now retries on a read timeout.
	* lib/rubygems/specification.rb: specifications loaded from file are now
	  evaluated with their filename to aid debugging.

2010-02-24  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/unpack_command.rb:  `gem unpack` now unpacks
	  remote gems.

2010-02-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency.rb:  Support #version_requirements= with a
	  warning.  Bug #27868 by Wei Jen Lu.
	* lib/rubygems/installer.rb:  Fix `gem unpack`.  Bug #27872 by Timothy
	  Jones.
	* lib, test:  Import changes from ruby trunk.

2010-02-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  1.3.6.
	* test/*:  Windows test fixes
	* lib/rubygems/remote_fetcher.rb:  Fix same file detection on windows.
