@@ -185,8 +185,21 @@ class Gem::Commands::QueryCommand < Gem::Command
       entry = gem_name.dup
 
       if options[:versions] then
-        versions = matching_tuples.map { |(name, version,_),_| version }.uniq
-        entry << " (#{versions.join ', '})"
+        list = if platforms.empty? or options[:details] then
+                 matching_tuples.map { |(name, version,_),_| version }.uniq
+               else
+                 platforms.sort.reverse.map do |version, pls|
+                   if pls == [Gem::Platform::RUBY] then
+                     version
+                   else
+                     ruby = pls.delete Gem::Platform::RUBY
+                     platform_list = [ruby, *pls.sort].compact
+                     "#{version} #{platform_list.join ' '}"
+                   end
+                 end
+               end.join ', '
+
+        entry << " (#{list})"
       end
 
       if options[:details] then
