@@ -18,6 +18,8 @@
 	  1.3.7 release notes.  Bug #27896 by Matt Patterson.
 	* lib/rubygems/commands/query_command.rb:  --version is only for use
 	  with --installed.  Bug #27857 by Greg Hazel.
+	* lib/rubygems/commands/query_command.rb:  Regular output now lists
+	  platforms.  Bug #27856 by Greg Hazel.
 
 2010-04-19  Eric Hodel  <drbrain@segment7.net>
 
